[package]
name = "image_websocket"
version = "0.1.0"
description = "Screen Sharing App via LAN"
authors = ["you"]
edition = "2021"

[lib]
name = "image_websocket_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_bytes = "0.11"

# Screen capture
xcap = "0.0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket
tokio-tungstenite = "0.21"
futures-util = "0.3"

# Image processing
image = "0.25"

# Base64 encoding
base64 = "0.22"

# Get local IP
if-addrs = "0.13"

# Logging
log = "0.4"
